# codal-tensorflow

./: CMakeLists.txt  Makefile  README.md  cmsis_compiler.h  refresh.sh
tensorflow/lite/micro/tools/make/downloads/cmsis/CMSIS/NN/Include/: arm_nnsupportfunctions.h
tensorflow/lite/micro/tools/make/downloads/cmsis/CMSIS/NN/Source/ActivationFunctions/: arm_nn_activations_q15.c  arm_nn_activations_q7.c
tensorflow/lite/micro/tools/make/downloads/cmsis/CMSIS/NN/Source/NNSupportFunctions/: arm_nn_accumulate_q7_to_q15.c  arm_nn_add_q7.c  arm_nn_mat_mult_nt_t_s8.c
tensorflow/lite/micro/tools/make/downloads/cmsis/CMSIS/NN/Source/ReshapeFunctions/: arm_reshape_s8.c
tensorflow/lite/micro/tools/make/downloads/cmsis/CMSIS/NN/Source/SoftmaxFunctions/: arm_softmax_u8.c
